# neuroslicer

./: .gitignore  PRD-NeuroSlicer-v1.1-PureCPP.md  README.md  pyproject.toml
data/: troubleshooting_seed.json
docs/: development_plan.md
neuroslicer/: __init__.py  cli.py  config.py  data_sources.py  diagnostics.py  hf_client.py  knowledge_base.py  profile_manager.py
tests/: test_cli.py  test_config.py  test_data_sources.py  test_diagnostics.py  test_knowledge_base.py  test_profile_manager.py
